..F....... [ZBXNEXT-2073] update jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new User parameter to daemon configurations that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
..F....... [ZBX-7631] fixed dashboard favourite widget width (Eduard)
....I..... [ZBX-7622] changed the default value of timeperiods.every field to '1' (wiper)
...G...PS. [ZBX-7618] removed partial matching for long format command line options (Juris)
..F....... [ZBX-6940] fixed frontend history links not remembering search queries (Pavels)
...G...... [ZBX-7413] fixed concistentcy of config file handling for loading and checking userparameters and aliases before starting the daemon (igors)
...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
........S. [ZBX-7204] fixed the timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
.......PS. [ZBX-7649] synchronize ICMP checks based on item interface. This should reduce the number of fping invocations in most cases (wiper)
..F.....S. [ZBXNEXT-2069] added HOST.PORT macro support to internal/trigger based notifications and also to trigger names/descriptions  (wiper, Oleg)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-7671] fixed error when importing an existing trigger with dependencies from 1.8 (Pavels)
A......... [ZBX-7703] fixed being able to switch users without proper credentials when using HTTP authentication (Pavels)
...G...... [ZBX-7648] fixed name resolution when using net.dns items (Juris)